<resources>
    <string name="app_name">Eggs</string>
    <string name="demo">DEMO</string>

    <!--            real            -->
<!--        <string name="admob_big">ca-app-pub-6785166837488087/6105265506</string>-->

    <!--          for test  -->
    <string name="admob_big">ca-app-pub-3940256099942544/1033173712</string>


    <string name="high_score">%1$d (%2$d)</string>

    <string name="not_logged_in">NOT LOGGED IN</string>
    <string name="database_empty">DATABASE EMPTY</string>
    <string name="database_error">DATABASE ERROR</string>

    <string name="ranking_position">%1$d %2$s</string>
    <string name="image">IMAGE</string>
    <string name="exit">EXIT</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ok">OK</string>
    <string name="change">CHANGE</string>
    <string name="high_score_a">HIGH SCORE A</string>
    <string name="high_score_b">HIGH SCORE B</string>
    <string name="total_points">TOTAL POINTS</string>
    <string name="back_to_game">BACK TO GAME</string>
    <string name="log_in">LOG IN</string>
    <string name="other_games">OTHER GAMES</string>
    <string name="ranking">RANKING</string>
    <string name="name">NAME</string>
    <string name="high_a">HIGH A</string>
    <string name="high_b">HIGH B</string>
    <string name="total">TOTAL</string>
    <string name="send_this_game_to_friend">SEND THIS GAME TO A FRIEND</string>
    <string name="battle_ships_game">BATTLE SHIPS GAME</string>
    <string name="page_counter">%1$d/%2$d</string>
    <string name="other_games_link">https://play.google.com/store/apps/developer?id=Tomasz+Turkiewicz</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="warning">!!! WARNING !!!</string>
    <string name="warning_message">Your account will be deleted. Are You sure?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">ACCOUNT</string>
    <string name="dark_mode">DARK MODE</string>
    <string name="auto">AUTO</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
</resources>
