<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DeleteUserFragment"
    android:id="@+id/deleteUserFragment"
    android:background="@color/black">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/deleteUserActivityContainer"/>

    <TextView
        android:id="@+id/warning_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/warning"
        android:textColor="@color/red_dark"
        android:textStyle="bold"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/warning_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/warning_message"
        android:includeFontPadding="false"/>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headerUserName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/headerHighScoreA"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/high_a"
            android:layout_gravity="center"
            android:gravity="center_vertical|right"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/headerHighScoreB"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/high_b"
            android:layout_gravity="center"
            android:gravity="center_vertical|right"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/headerTotalScore"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_gravity="center"
            android:gravity="center_vertical|right"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:layout_gravity="center"
            android:textColor="@color/black"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/highScoreA"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|right"
            android:textColor="@color/black"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/highScoreB"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|right"
            android:textColor="@color/black"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/totalScore"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|right"
            android:textColor="@color/black"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/backToGameLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/backToGameBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/backToGameImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"/>

        <TextView
            android:id="@+id/backToGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_game"
            android:gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteUserLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deleteUserTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textColor="@color/red_dark"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/deleteUserImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"/>

        <TextView
            android:id="@+id/deleteUserTvBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>